--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -95,7 +95,11 @@
           </small>
         </div>
         <div class="footer__version">
-          <small>{{ "Version" | translate }} {{ currentApplicationVersion }}
+          <small>
+            {{ "Version" | translate }} {{ currentApplicationVersion }}
+          </small>
+          <small>
+            {{ "Environment" | translate}}: {{environment}}
           </small>
         </div>
       </div>
