--- a/src/app/shared/layout/layout.component.html
+++ b/src/app/shared/layout/layout.component.html
@@ -28,14 +28,14 @@
         </div>
   
         <ul class="navbar-nav c-user">
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+          <li class="dropdown" dropdown>
+            <a class="dropdown-toggle" dropdownToggle>
               <span class="thumb-sm avatar pull-left">
                 <img src="assets/images/avatar.png" />
               </span>
               {{ currentUser ? currentUser.username : ''}}
             </a>
-            <ul class="dropdown-menu animated fadeInDown">
+            <ul class="dropdown-menu animated fadeInDown" *dropdownMenu>
               <span class="arrow top"></span>
               <li>
                 <a (click)="showShortcutModal()">{{ "Shortcuts" | translate }}</a>
