--- a/src/app/shared/layout/layout.component.html
+++ b/src/app/shared/layout/layout.component.html
@@ -330,6 +330,7 @@
     <ng-template #modalContent>
       @if(modalDisplayContent == 'ShowShortcuts'){
       <p>Shortcuts</p>
+      <!-- <app-shortcuts-list></app-shortcuts-list> -->
       }@else {
       {{'AreSureResetAllNotificationSettings'|translate}}
       }
