--- a/src/app/shared/block-ui/block-ui.component.html
+++ b/src/app/shared/block-ui/block-ui.component.html
@@ -3,7 +3,7 @@
   <div class="block-ui-overlay" *ngIf="isBlocked">
     <div class="block-ui-content">
       <div class="spinner"></div>
-      <div class="message">{{ message }}</div>
+      <div class="message">{{ message | translate }}</div>
     </div>
   </div>
 </div> 
