--- a/src/app/shared/modal/modal.component.html
+++ b/src/app/shared/modal/modal.component.html
@@ -5,7 +5,7 @@
         <button class="close-button" (click)="onCancel()">&times;</button>
       </div>
       
-      <div class="modal-content">
+      <div class="modal-content-body">
         <ng-container *ngTemplateOutlet="content"></ng-container>
       </div>
   
