--- a/src/app/shared/modal/modal.component.html
+++ b/src/app/shared/modal/modal.component.html
@@ -1,7 +1,7 @@
-<div class="modal-overlay" *ngIf="isOpen" (click)="onCancel()">
+<div class="modal-overlay" *ngIf="isOpen()" (click)="onCancel()">
     <div class="modal-container" (click)="$event.stopPropagation()">
-      <div class="modal-header" [ngClass]="headerClass">
-        <h2 class="modal-title">{{ title| translate }}</h2>
+      <div class="modal-header" [ngClass]="headerClass()">
+        <h2 class="modal-title">{{ title() | translate }}</h2>
         <button class="close-button" (click)="onCancel()">&times;</button>
       </div>
       
@@ -13,18 +13,18 @@
         <div class="footer-content">
           <div class="left-section">
             <div class="modal-buttons">
-              <button class="btn btn-secondary" (click)="onCancel()" [disabled]="isLoading" *ngIf="displayTwoOptions">
+              <button class="btn btn-secondary" (click)="onCancel()" [disabled]="isLoading()" *ngIf="displayTwoOptions()">
                 {{ renderCancelOption() | translate }}
               </button>
-              <button class="btn btn-primary" (click)="onAccept()" [disabled]="isLoading">
-                <span *ngIf="isLoading" class="button-loading">⟳</span>
-                {{ renderOkOption() |translate }}
+              <button class="btn btn-primary" (click)="onAccept()" [disabled]="isLoading()">
+                <span *ngIf="isLoading()" class="button-loading">⟳</span>
+                {{ renderOkOption() | translate }}
               </button>
             </div>
 
-            <div class="dont-ask-again" *ngIf="showDontAskAgain">
+            <div class="dont-ask-again" *ngIf="showDontAskAgain()">
               <label>
-                <input type="checkbox" [(ngModel)]="dontAskAgain" (change)="onDontAskAgainChange($event)">
+                <input type="checkbox" [ngModel]="dontAskAgain()" (ngModelChange)="dontAskAgain.set($event)" (change)="onDontAskAgainChange($event)">
                 {{ 'DoNotShowAgain' | translate }}
               </label>
             </div>
