--- a/src/app/shared/layout/layout.component.html
+++ b/src/app/shared/layout/layout.component.html
@@ -327,7 +327,7 @@
     [showDontAskAgain]="modalDisplayContent === 'ShowShortcuts'? false : true" [headerType]="'warning'"
     [optionType]="modalDisplayContent === 'ShowShortcuts'? 'Accept' : 'Ok/Cancel'" [remenberKey]="modalDisplayContent === 'ShowShortcuts'? '' : 'ResetNotificationSkip'"
     (accept)="onAccept($event)" (cancel)="onCancel()" (dontAskAgainChange)="onDontAskAgainChange($event)" 
-    (onCloseModal)="closeModal($event)"  >
+    (onCloseModal)="closeModal($event)" [position]="'middle-top'"  >
     <ng-template #modalContent>
       @if(modalDisplayContent == 'ShowShortcuts'){
       <p>Shortcuts</p>
