--- a/src/app/modules/Site/site/site.component.html
+++ b/src/app/modules/Site/site/site.component.html
@@ -1,3 +1,6 @@
 <app-layout>
-    <router-outlet />
+    <div [@routeTransition]="prepareRoute(outlet)">
+        <router-outlet #outlet="outlet" />
+      </div>
+
 </app-layout>
