create dinamic render ribbon mechanis

--- a/src/app/shared/layout/layout.component.html
+++ b/src/app/shared/layout/layout.component.html
@@ -290,7 +290,7 @@
             </header>
             <div class="panel-body panel-ribbon">
               <div class="tab-content">
-                <!-- <app-ribbon></app-ribbon> -->
+                <app-ribbon></app-ribbon>
               </div>
             </div>
           </section>
